--- a/package.json
+++ b/package.json
@@ -1,20 +1,16 @@
 {
-  "name": "class-transformer",
-  "version": "0.2.3",
+  "name": "@fundcount/fc-class-transformer",
+  "version": "0.2.4",
   "description": "Proper decorator-based transformation / serialization / deserialization of plain javascript objects to class constructors",
   "license": "MIT",
   "readmeFilename": "README.md",
-  "private": true,
   "author": {
     "name": "Umed Khudoiberdiev",
     "email": "pleerock.me@gmail.com"
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/pleerock/class-transformer.git"
-  },
-  "bugs": {
-    "url": "https://github.com/pleerock/class-transformer/issues"
+    "url": "https://github.com/FundCount/fc-class-transformer.git"
   },
   "tags": [
     "serialization",
